--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "apify-client>=2.4.0",
     "langchain-groq>=1.1.1",
+    "mcp[cli]>=1.26.0",
     "openai>=2.16.0",
     "pymupdf>=1.26.7",
     "python-dotenv>=1.2.1",
